force-app/main/default/objects/FS_Project_Jira__mdt/FS_Project_Jira__mdt.object-meta.xml
<CustomObject>
    <label>Project Jira</label>
    <pluralLabel>Projects Jira</pluralLabel>
</CustomObject>