force-app/main/default/objects/FS_Project_Jira__mdt/fields/FS_Nombre_del_Proyecto_Jira__c.field-meta.xml
<CustomField>
    <fullName>FS_Nombre_del_Proyecto_Jira__c</fullName>
    <label>Nombre del Proyecto Jira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>