force-app/main/default/objects/FS_Project_Jira__mdt/fields/FS_Sub_Tipo__c.field-meta.xml
<CustomField>
    <fullName>FS_Sub_Tipo__c</fullName>
    <label>Sub Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puntual</fullName>
            </value>
            <value>
                <fullName>Definitivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>