force-app/main/default/objects/FS_Project_Jira__mdt/fields/FS_Tesoreria__c.field-meta.xml
<CustomField>
    <fullName>FS_Tesoreria__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cambio que nos permite diferenciar si el Jira pertenece a Casos de Tesoreria.</inlineHelpText>
    <label>Tesoreria</label>
    <type>Checkbox</type>
</CustomField>