force-app/main/default/objects/FS_Project_Jira__mdt/fields/FS_Tipo_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>FS_Tipo_de_Registro__c</fullName>
    <label>Tipo de Registro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulta</fullName>
                <default>true</default>
                <label>Consulta</label>
            </value>
            <value>
                <fullName>Incidente</fullName>
            </value>
            <value>
                <fullName>Requerimiento</fullName>
            </value>
            <value>
                <fullName>Solicitud (Falla Operativa)</fullName>
            </value>
            <value>
                <fullName>Control de Cambios</fullName>
            </value>
            <value>
                <fullName>Tiempo y Materiales - Con Sprints</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>